# sightstone

./: .gitignore  Makefile  README.md  build.spec  driver.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  pylint.yml  run.yml
lib/: __init__.py  background_thread.py  config.py  windows_calls.py
sightstone/: __init__.py  background_thread.py  gui.py  lca_hook.py  main.py  sightstone.py  sightstone_constants.py
src/: gui.py  main.py
